[project]
name = "comfyui-sim2real"
version = "0.1.0"
description = "ComfyUI custom nodes for sim-to-real depth conditioning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steven Cheng"}
]
keywords = ["comfyui", "controlnet", "depth", "sim2real", "isaac-sim"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

# Note: No [build-system] or [tool.hatch.build] needed.
# ComfyUI custom nodes are installed via git clone, not pip install.
