[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-sim2real"
version = "0.1.0"
description = "ComfyUI custom nodes for sim-to-real conditioning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steven Cheng"}
]
keywords = ["comfyui", "controlnet", "depth", "sim2real", "isaac-sim"]

dependencies = []  # ComfyUI provides torch/numpy/PIL at runtime

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["comfyui_sim2real"]
